--- a/JackTimingApp/JackTimingApp/MainPage.xaml
+++ b/JackTimingApp/JackTimingApp/MainPage.xaml
@@ -1,11 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:JackTimingApp"
-             x:Class="JackTimingApp.MainPage">
+<ContentPage
+    x:Class="JackTimingApp.MainPage"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:jackTimingApp="clr-namespace:JackTimingApp;assembly=JackTimingApp"
+    xmlns:skia="clr-namespace:SkiaSharp.Views.Forms;assembly=SkiaSharp.Views.Forms">
 
-	<Label Text="Welcome to Xamarin.Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
+        <skia:SKCanvasView x:Name="canvasView" Grid.Row="0">
+            <skia:SKCanvasView.Behaviors>
+                <jackTimingApp:EventToCommandBehavior Command="{Binding PaintSurfaceCommand}" EventName="PaintSurface" />
+            </skia:SKCanvasView.Behaviors>
+        </skia:SKCanvasView>
+
+        <Editor
+            x:Name="txtData"
+            Grid.Row="1"
+            BackgroundColor="DarkGray"
+            Text="{Binding TimingData}">
+            <Editor.Behaviors>
+                <jackTimingApp:EventToCommandBehavior Command="{Binding ChangeTimingCommand}" EventName="TextChanged" />
+            </Editor.Behaviors>
+        </Editor>
+
+    </Grid>
 </ContentPage>
